--- a/.github/workflows/terraform-deploy.yml
+++ b/.github/workflows/terraform-deploy.yml
@@ -21,7 +21,7 @@ jobs:
         uses: google-github-actions/auth@v2
         with:
           credentials_json: ${{ secrets.GCP_TF_KEY }}
-          
+
       - name: Export GOOGLE_APPLICATION_CREDENTIALS
         run: echo "GOOGLE_APPLICATION_CREDENTIALS=$HOME/gcp-key.json" >> $GITHUB_ENV
 
@@ -35,4 +35,7 @@ jobs:
         run: terraform validate
 
       - name: Generate Terraform plan
-        run: terraform plan
+        run: terraform plan \
+          -var="project_id=${{ secrets.TF_VAR_project_id }}" \
+          -var="bucket_name=${{ secrets.TF_VAR_bucket_name }}" \
+          -var="region_name=${{ secrets.TF_VAR_region_name }}"
