--- a/.github/workflows/terraform-deploy.yml
+++ b/.github/workflows/terraform-deploy.yml
@@ -29,4 +29,8 @@ jobs:
         run: terraform validate
 
       - name: Generate Terraform plan
-        run: terraform plan -var="project_id=${{ secrets.TF_VAR_project_id }}" -var="bucket_name=${{ secrets.TF_VAR_bucket_name }}" -var="region_name=${{ secrets.TF_VAR_region_name }}"
+        run: |
+          terraform plan \
+            -var="project_id=${{ secrets.TF_VAR_project_id }}" \
+            -var="bucket_name=${{ secrets.TF_VAR_bucket_name }}" \
+            -var="region_name=${{ secrets.TF_VAR_region_name }}"
