--- a/.github/workflows/terraform-deploy.yml
+++ b/.github/workflows/terraform-deploy.yml
@@ -17,7 +17,7 @@ jobs:
       - name: Authenticate with Google Cloud
         uses: google-github-actions/auth@v2
         with:
-          credentials_json: ${{ secrets.GCP_TF_KEY }}  # Usa el secreto de autenticación de Google Cloud
+          credentials_json: ${{ secrets.GCP_TF_KEY }}
 
       - name: Install Terraform
         uses: hashicorp/setup-terraform@v3
@@ -34,3 +34,18 @@ jobs:
             -var="project_id=${{ secrets.TF_VAR_project_id }}" \
             -var="bucket_name=${{ secrets.TF_VAR_bucket_name }}" \
             -var="region_name=${{ secrets.TF_VAR_region_name }}"
+
+      - name: Manual approval before applying
+        uses: peter-evans/workflow-dispatch@v1
+        with:
+          token: ${{ secrets.GITHUB_TOKEN }}
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+
+      - name: Apply Terraform configuration
+        run: |
+          terraform apply -auto-approve \
+            -var="project_id=${{ secrets.TF_VAR_project_id }}" \
+            -var="bucket_name=${{ secrets.TF_VAR_bucket_name }}" \
+            -var="region_name=${{ secrets.TF_VAR_region_name }}"
+        if: success()
