--- a/.github/workflows/terraform-deploy.yml
+++ b/.github/workflows/terraform-deploy.yml
@@ -35,12 +35,18 @@ jobs:
             -var="bucket_name=${{ secrets.TF_VAR_bucket_name }}" \
             -var="region_name=${{ secrets.TF_VAR_region_name }}"
 
-      - name: Manual approval before applying
+      - name: Manual Approval Apply
         uses: trstringer/manual-approval@v1
         with:
-          token: ${{ secrets.GITHUB_TOKEN }}
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          secret: ${{ secrets.GITHUB_TOKEN }}
+          approvers: "dvoliva"
+          minimum-approvals: 1
+          issue-title: "tf apply approval"
+          issue-body: "Please approve or deny applying the plan"
+          exclude-workflow-initiator-as-approver: false
+          additional-approved-words: ""
+          additional-denied-words: ""
+          timeout-minutes: 60
 
       - name: Apply Terraform configuration
         run: |
