--- a/.github/workflows/terraform-deploy.yml
+++ b/.github/workflows/terraform-deploy.yml
@@ -5,6 +5,10 @@ on:
     branches:
       - master
 
+permissions:
+  issues: write  # Permite la creación y manipulación de issues
+  pull-requests: write  # Permite la manipulación de pull requests
+
 jobs:
   terraform:
     name: Terraform Init and Plan
@@ -39,6 +43,7 @@ jobs:
         uses: trstringer/manual-approval@v1
         with:
           secret: ${{ secrets.GITHUB_TOKEN }}
+          approvers: "dvoliva"
           minimum-approvals: 1
           issue-title: "tf apply approval"
           issue-body: "Please approve or deny applying the plan"
@@ -54,3 +59,4 @@ jobs:
             -var="bucket_name=${{ secrets.TF_VAR_bucket_name }}" \
             -var="region_name=${{ secrets.TF_VAR_region_name }}"
         if: success()
+        
